[package]
name = "tracing-configuration"
version = "0.1.2"
edition = "2021"
description = "serializable configuration for a dynamic tracing-subscriber"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/tracing-configuration"
repository = "https://github.com/aatifsyed/tracing-configuration"

[dependencies]
io-extra = "0.3.0"
schemars = { version = "0.8.21", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
thiserror = "1.0.58"
tracing-appender = "0.2.3"
tracing-core = { version = "0.1.32", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "chrono",
    "env-filter",
    "fmt",
    "json",
    "std",
], default-features = false }

[features]
schemars = ["dep:schemars", "serde"]
serde = ["dep:serde"]
default = ["serde"]

[dev-dependencies]
expect-test = "1.5.0"
serde_json = "1.0.128"
