[package]
name = "tracing-configuration"
version = "0.3.0"
edition = "2021"
description = "serializable configuration for a dynamic tracing-subscriber"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/tracing-configuration"
repository = "https://github.com/aatifsyed/tracing-configuration"

[dependencies]
io-extra = "0.3.0"
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_with = { version = "3.14.0", optional = true }
strum-lite = "0.1.1"
thiserror = "2.0.12"
tracing-appender = "0.2.3"
tracing-core = { version = "0.1.32", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "chrono",
    "env-filter",
    "fmt",
    "json",
    "std",
], default-features = false }
winnow = "0.7.11"
clap = { version = "4.5.41", optional = true, default-features = false, features = ["derive", "std"] }

[features]
default = []

# These features track the latest versions of these crates.
# Bumping them is not considered semver-breaking,
# Use the versioned names if that's not desired.
serde = ["serde1"]
schemars = ["schemars1"]
clap = ["clap4"]

schemars1 = ["dep:schemars", "serde1"]
serde1 = ["dep:serde", "dep:serde_with"]
clap4 = ["dep:clap"]

[dev-dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
expect-test = "1.5.0"
json5 = "0.4.1"
serde_json = "1.0.128"
serde_path_to_error = "0.1.16"
tracing = "0.1.40"
